# deepsearch-agents

./: .env.example  .gitignore  LICENSE  README.md  main.py  mypy.ini  pyproject.toml  settings.yaml
src/deepsearch_agents/: __init__.py  _utils.py  agent.py  conf.py  context.py  llm.py  log.py  manager.py  planner.py  run.py
src/deepsearch_agents/llm/: __init__.py  emb.py  llm.py
src/deepsearch_agents/tools/: __init__.py  _trace.py  _utils.py  answer.py  evaluate.py  pick.py  reflect.py  rewrite.py  search.py  summarize.py  trackable_tool.py  visit.py
