[project]
name = "deepsearch-agents"
version = "0.1.0"
description = "A minimal agents implementation for DeepSearch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncio>=3.4.3",
    "dotenv>=0.9.9",
    "openai>=1.68",
    "openai-agents>=0.0.6",
    "serpapi>=0.1.5",
]

[tool.setuptools.package-data]
deepsearch_agents = ["py.typed"]
